correcciones, update documentacion
se eliminaron metodos que no se usaban y se actualizo la documentacion de la API
